--- a/contacts.html
+++ b/contacts.html
@@ -48,11 +48,11 @@
         <section class="section">
 <form id="myForm">
         <label for="dataInput1">Name</label>
-        <input class="contact-form-input" type="text" id="dataInput1" name="dataInput">
+        <input class="cont-form" type="text" id="dataInput1" name="dataInput">
         <label for="dataInput2">Email</label>
-        <input class="contact-form-input" type="text" id="dataInput2" name="dataInput">
+        <input class="cont-form" type="text" id="dataInput2" name="dataInput">
         <label for="phone">Phone</label>
-    <input class="contact-form-input" type="tel" name="user-phone" id="phone" required/>
+    <input class="cont-form" type="tel" name="user-phone" id="phone" required/>
         <!-- Додайте стільки полів вводу, скільки вам потрібно -->
         <span id="error" class="error"></span>
         <br>
