--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                         <label class="contact-form-label" for="phone"><span
                                 class="contact-form-label-text">Phone</span></label>
                         <div class="contact-form-label-box">
-                            <input class="contact-form-input" type="tel" name="user-phone" id="phone" required/>
+                            <input class="contact-form-input" type="tel" name="user-phone" id="dataInput3" required/>
                             <svg class="contact-form-input-icon" width="18" height="24">
                                 <use href="./images/icon.svg#icon-phone"></use>
                             </svg>
