--- a/contacts.html
+++ b/contacts.html
@@ -75,8 +75,8 @@
         <tbody>
         </tbody>
     </table>
-    <button id="duplicateButton">Дублювати обрані</button>
-    <button id="deleteButton">Видалити обрані</button>
+    <button id="duplicateButton" class="main-btn">Дублювати обрані</button>
+    <button id="deleteButton" class="main-btn">Видалити обрані</button>
 
                      
                 </div>
